<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:textSize="25sp" />
    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/log_in"
        android:drawableStart="@drawable/user_logo"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/user_field"
        android:drawableStart="@drawable/password_logo"
        android:drawablePadding="10dp"/>
    <Button
        android:id="@+id/log_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:layout_margin="30dp"
        android:layout_centerInParent="true"
        android:backgroundTint="#C8E6C9"
        android:onClick="login_user"
        android:text="@string/log_in"/>
    <TextView
        android:id="@+id/mesaage_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/register_log_in"
        android:layout_below="@id/log_btn"/>
    <Button
        android:id="@+id/sign_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mesaage_sign_in"
        android:layout_margin="10dp"
        android:backgroundTint="#C8E6C9"
        android:layout_centerInParent="true"
        android:onClick="register_user"
        android:text="@string/create_account"/>
</RelativeLayout>